// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hierarchicalLayout – snapshot integration tests > diamond shape DAG 1`] = `
{
  "layers": [
    [
      "A",
    ],
    [
      "B",
      "C",
    ],
    [
      "D",
    ],
  ],
  "pos": {
    "A": {
      "x": 0,
      "y": 0,
    },
    "B": {
      "x": -60,
      "y": 100,
    },
    "C": {
      "x": 60,
      "y": 100,
    },
    "D": {
      "x": 0,
      "y": 200,
    },
  },
}
`;

exports[`hierarchicalLayout – snapshot integration tests > long chain 1`] = `
{
  "layers": [
    [
      "A",
    ],
    [
      "B",
    ],
    [
      "C",
    ],
    [
      "D",
    ],
    [
      "E",
    ],
  ],
  "pos": {
    "A": {
      "x": 0,
      "y": 0,
    },
    "B": {
      "x": 0,
      "y": 100,
    },
    "C": {
      "x": 0,
      "y": 200,
    },
    "D": {
      "x": 0,
      "y": 300,
    },
    "E": {
      "x": 0,
      "y": 400,
    },
  },
}
`;

exports[`hierarchicalLayout – snapshot integration tests > single node 1`] = `
{
  "layers": [
    [
      "A",
    ],
  ],
  "pos": {
    "A": {
      "x": 0,
      "y": 0,
    },
  },
}
`;

exports[`hierarchicalLayout – snapshot integration tests > wide branching layer 1`] = `
{
  "layers": [
    [
      "A",
    ],
    [
      "B",
      "C",
      "D",
    ],
  ],
  "pos": {
    "A": {
      "x": 0,
      "y": 0,
    },
    "B": {
      "x": -120,
      "y": 100,
    },
    "C": {
      "x": 0,
      "y": 100,
    },
    "D": {
      "x": 120,
      "y": 100,
    },
  },
}
`;
